Changed the building's text's color\

--- a/res/layout/classes.xml
+++ b/res/layout/classes.xml
@@ -38,7 +38,7 @@
 	    	android:layout_marginTop="2dip"
 	    	android:layout_marginLeft="25dip"
 	    	android:layout_below="@+id/building"
-	    	android:textColor="@color/status_text"
+	    	android:textColor="#000"
 		/>
 		<CheckBox 
 	    	android:id="@+id/build_box2"
@@ -49,7 +49,7 @@
 		    android:layout_marginLeft="25dip"
 		    android:layout_below="@+id/building"
 		    android:layout_toRightOf="@+id/build_box1"
-	    	android:textColor="@color/status_text"
+	    	android:textColor="#000"
 		/>
 	
 		<TextView
