Books search and list completed. TODO: "load more" button.

--- a/res/layout/books_row.xml
+++ b/res/layout/books_row.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:layout_alignLeft="@+id/book_author"
@@ -14,29 +14,25 @@
         android:layout_marginRight="4dp"
         android:text="Book Title "
         android:textStyle="bold"
-        android:textSize="16dip"/>
+        android:textSize="14dip"/>
     <TextView 
         android:id="@+id/book_num"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@id/book_title"
-        android:layout_alignTop="@id/book_title"
-        android:text="索书号"
+        android:layout_below="@id/book_title"
         android:textSize="14dip"/>
     <TextView 
         android:id="@+id/book_author"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/book_title"
+        android:layout_below="@id/book_num"
         android:layout_marginRight="4dp"
-        android:text="责任人"
-        android:textSize="14dip"/>
+        android:textSize="12dip"/>
     <TextView 
         android:id="@+id/book_publisher"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@id/book_author"
         android:layout_alignTop="@id/book_author"
-        android:text="出版信息"
-        android:textSize="14dip"/>
+        android:textSize="12dip"/>
 </RelativeLayout>
