--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -16,6 +16,7 @@
   <color name="simple_text_color">#FF52991F</color>
   <color name="body_background">#F3FEFF</color>
   
+  <color name="black">#000</color>
   <color name="clear">#00000000</color>
   <color name="button_text">#444</color>
   <color name="action_bar">#fff</color>
