--- a/res/layout/classes.xml
+++ b/res/layout/classes.xml
@@ -9,6 +9,10 @@
   	<!-- Header -->
   	<include layout="@layout/header"/>
   	 
+	<ScrollView
+		xmlns:android="http://schemas.android.com/apk/res/android"
+		android:layout_width="fill_parent"
+		android:layout_height="fill_parent" >
 	<RelativeLayout
 		xmlns:android="http://schemas.android.com/apk/res/android"
 		android:orientation="vertical"
@@ -167,4 +171,5 @@
 		    android:layout_toRightOf="@+id/search_button"
 		/>
 	</RelativeLayout>
+	</ScrollView>
 </LinearLayout>
