--- a/res/layout/result.xml
+++ b/res/layout/result.xml
@@ -1,11 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-	xmlns:android="http://schemas.android.com/apk/res/android"
-	android:layout_width="fill_parent"
-	android:layout_height="fill_parent" >
-<TextView
-	android:id="@+id/text"
-	android:textSize="20dip"
-	android:layout_width="fill_parent"
-	android:layout_height="wrap_content" />
-</ScrollView>
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
+    
+    <include layout="@layout/header_back"/>
+    
+	<TextView
+		android:id="@+id/class_result_title"
+	    android:layout_width="fill_parent"
+	    android:layout_height="wrap_content"
+	    android:padding="3dip"
+	    android:layout_below="@+id/LinearLayout01"
+	    android:background="#65999999"
+	    android:textColor="@color/status_text"
+	/>
+	 <ListView
+	    android:id="@+id/class_result_list"
+	  	android:layout_width="fill_parent"
+	  	android:layout_height="fill_parent"
+	  	android:layout_below="@id/class_result_title"
+	  	android:layout_weight="1" 
+ 	    android:cacheColorHint="#00000000"
+	    android:fadeScrollbars="true"
+    	android:divider="@drawable/dashed_line"
+    	android:dividerHeight="1dip"
+    	android:fastScrollEnabled="true"
+	/>
+</RelativeLayout>
