--- a/res/layout/rooms_row.xml
+++ b/res/layout/rooms_row.xml
@@ -1,43 +1,190 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:layout_alignLeft="@+id/room_result1"
-    android:padding="8dip" >
+	android:clickable="true"
+    android:orientation="horizontal"
+    android:layout_alignLeft="@+id/room_result1">
 
     <TextView
-        android:id="@+id/room_result1"
+        android:id="@+id/room_result"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true" />
+        android:textSize="20dip" />
 
-    <TextView
-        android:id="@+id/room_result2"
+    <LinearLayout 
+        android:id="@+id/room_layout1"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/room_result1"
-        android:layout_toRightOf="@+id/room_result1" />
+        android:layout_height="fill_parent"
+        android:paddingLeft="20dip"
+        android:paddingRight="20dip"
+		android:clickable="true"
+    	android:background="@drawable/list_selector">
+    	<TextView
+        	android:id="@+id/room_result1"
+       		android:layout_width="wrap_content"
+        	android:layout_height="wrap_content"
+        	android:textSize="18dip" />
+    </LinearLayout>
+	<!-- 垂直分隔条 -->
+	<View
+	    android:id="@+id/separater1"
+		android:background="@drawable/vertical_separation_line_repeat"
+		android:layout_width="1.0dip"
+		android:layout_height="fill_parent"
+		>
+	</View>
 
-    <TextView
-        android:id="@+id/room_result3"
+    <LinearLayout 
+        android:id="@+id/room_layout2"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/room_result2"
-        android:layout_toRightOf="@+id/room_result2" />
+        android:layout_height="fill_parent"
+        android:paddingLeft="20dip"
+        android:paddingRight="20dip"
+		android:clickable="true"
+    	android:background="@drawable/list_selector">
+    	<TextView
+        	android:id="@+id/room_result2"
+       		android:layout_width="wrap_content"
+        	android:layout_height="wrap_content"
+        	android:textSize="18dip" />
+    </LinearLayout>
+	<!-- 垂直分隔条 -->
+	<View
+	    android:id="@+id/separater2"
+		android:background="@drawable/vertical_separation_line_repeat"
+		android:layout_width="1.0dip"
+		android:layout_height="fill_parent"
+		>
+	</View>
 
-    <TextView
-        android:id="@+id/room_result4"
+    <LinearLayout 
+        android:id="@+id/room_layout3"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/room_result3"
-        android:layout_toRightOf="@+id/room_result3" />
+        android:layout_height="fill_parent"
+		android:clickable="true"
+    	android:background="@drawable/list_selector"
+        android:paddingLeft="20dip"
+        android:paddingRight="20dip">
+    	<TextView
+        	android:id="@+id/room_result3"
+       		android:layout_width="wrap_content"
+        	android:layout_height="wrap_content"
+        	android:textSize="18dip" />
+    </LinearLayout>
+	<!-- 垂直分隔条 -->
+	<View
+	    android:id="@+id/separater3"
+		android:background="@drawable/vertical_separation_line_repeat"
+		android:layout_width="1.0dip"
+		android:layout_height="fill_parent"
+		>
+	</View>
 
-    <TextView
-        android:id="@+id/room_result5"
+    <LinearLayout 
+        android:id="@+id/room_layout4"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/room_result4"
-        android:layout_toRightOf="@+id/room_result4" />
+        android:layout_height="fill_parent"
+		android:clickable="true"
+    	android:background="@drawable/list_selector"
+        android:paddingLeft="20dip"
+        android:paddingRight="20dip">
+    	<TextView
+        	android:id="@+id/room_result4"
+       		android:layout_width="wrap_content"
+        	android:layout_height="wrap_content"
+        	android:textSize="18dip" />
+    </LinearLayout>
+	<!-- 垂直分隔条 -->
+	<View
+	    android:id="@+id/separater4"
+		android:background="@drawable/vertical_separation_line_repeat"
+		android:layout_width="1.0dip"
+		android:layout_height="fill_parent"
+		>
+	</View>
 
-</RelativeLayout>
+    <LinearLayout 
+        android:id="@+id/room_layout5"
+        android:layout_width="wrap_content"
+        android:layout_height="fill_parent"
+		android:clickable="true"
+    	android:background="@drawable/list_selector"
+        android:paddingLeft="20dip"
+        android:paddingRight="20dip">
+    	<TextView
+        	android:id="@+id/room_result5"
+       		android:layout_width="wrap_content"
+        	android:layout_height="wrap_content"
+        	android:textSize="18dip" />
+    </LinearLayout>
+	<!-- 垂直分隔条 -->
+	<View
+	    android:id="@+id/separater5"
+		android:background="@drawable/vertical_separation_line_repeat"
+		android:layout_width="1.0dip"
+		android:layout_height="fill_parent"
+		>
+	</View>
+
+    <LinearLayout 
+        android:id="@+id/room_layout6"
+        android:layout_width="wrap_content"
+        android:layout_height="fill_parent"
+		android:clickable="true"
+    	android:background="@drawable/list_selector"
+        android:paddingLeft="20dip"
+        android:paddingRight="20dip">
+    	<TextView
+        	android:id="@+id/room_result6"
+       		android:layout_width="wrap_content"
+        	android:layout_height="wrap_content"
+        	android:textSize="18dip" />
+    </LinearLayout>
+	<!-- 垂直分隔条 -->
+	<View
+	    android:id="@+id/separater6"
+		android:background="@drawable/vertical_separation_line_repeat"
+		android:layout_width="1.0dip"
+		android:layout_height="fill_parent"
+		>
+	</View>
+
+    <LinearLayout 
+        android:id="@+id/room_layout7"
+        android:layout_width="wrap_content"
+        android:layout_height="fill_parent"
+		android:clickable="true"
+    	android:background="@drawable/list_selector"
+        android:paddingLeft="20dip"
+        android:paddingRight="20dip">
+    	<TextView
+        	android:id="@+id/room_result7"
+       		android:layout_width="wrap_content"
+        	android:layout_height="wrap_content"
+        	android:textSize="18dip" />
+    </LinearLayout>
+	<!-- 垂直分隔条 -->
+	<View
+	    android:id="@+id/separater7"
+		android:background="@drawable/vertical_separation_line_repeat"
+		android:layout_width="1.0dip"
+		android:layout_height="fill_parent"
+		>
+	</View>
+
+    <LinearLayout 
+        android:id="@+id/room_layout8"
+        android:layout_width="wrap_content"
+        android:layout_height="fill_parent"
+		android:clickable="true"
+    	android:background="@drawable/list_selector"
+        android:paddingLeft="20dip"
+        android:paddingRight="20dip">
+    	<TextView
+        	android:id="@+id/room_result8"
+       		android:layout_width="wrap_content"
+        	android:layout_height="wrap_content"
+        	android:textSize="18dip" />
+    </LinearLayout>
+</LinearLayout>
