Finished the result class. Fixed the result list disorder bug. Changed the building checkbox to scroll horizontally.

--- a/res/layout/result.xml
+++ b/res/layout/result.xml
@@ -3,7 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+  	android:background="@color/body_background">
     
     <include layout="@layout/header_back"/>
     
@@ -21,7 +22,6 @@
 	  	android:layout_width="fill_parent"
 	  	android:layout_height="fill_parent"
 	  	android:layout_below="@id/class_result_title"
-	  	android:layout_weight="1" 
  	    android:cacheColorHint="#00000000"
 	    android:fadeScrollbars="true"
     	android:divider="@drawable/dashed_line"
