--- a/res/layout/classes.xml
+++ b/res/layout/classes.xml
@@ -17,7 +17,7 @@
 		xmlns:android="http://schemas.android.com/apk/res/android"
 		android:orientation="vertical"
     	android:layout_width="fill_parent"
-    	android:layout_height="fill_parent"
+    	android:layout_height="wrap_content"
     	>
     
 		<TextView
@@ -31,14 +31,13 @@
 	    	android:textColor="@color/status_text"
 		/>
 		
-	 	<ScrollView
+	 	<HorizontalScrollView
 	    	android:id="@+id/cla_build"
 	  		android:layout_width="fill_parent"
 	  		android:layout_height="wrap_content"
 	    	android:layout_marginTop="2dip"
 	    	android:layout_marginLeft="25dip"
 	    	android:layout_below="@+id/building"
-	    	android:textColor="#000"
 		/>
 	
 		<TextView
