--- a/res/layout/header_back.xml
+++ b/res/layout/header_back.xml
@@ -22,7 +22,7 @@
         <TextView android:id="@+id/title"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
-          android:layout_alignParentLeft="true"
+          android:layout_toRightOf="@id/top_back"
           android:layout_marginTop="12dp"
           android:layout_marginLeft="3dp"
           android:background="@null"
