--- a/res/layout/library.xml
+++ b/res/layout/library.xml
@@ -16,19 +16,57 @@
 	    android:padding="3dip"
 	    android:background="#65999999"
 	    android:textColor="@color/status_text"
+	    android:textStyle="bold"
 	/>
-	 <ListView
-	    android:id="@+id/library_time_list"
-	  	android:layout_width="fill_parent"
-	  	android:layout_height="wrap_content"
-	  	android:layout_weight="1" 
- 	    android:cacheColorHint="#00000000"
-	    android:fadeScrollbars="true"
-    	android:divider="@drawable/dashed_line"
-    	android:dividerHeight="1dip"
-    	android:fastScrollEnabled="true"
-	/>
-	 
+	<LinearLayout 
+	    android:layout_width="fill_parent"
+	    android:layout_height="wrap_content"
+	    android:orientation="horizontal">
+		<LinearLayout 
+	    	android:layout_width="fill_parent"
+	    	android:layout_height="wrap_content"
+	    	android:layout_weight="1"
+	    	android:orientation="vertical">
+	    	<TextView 
+	    	    android:layout_width="fill_parent"
+	    	    android:layout_height="wrap_content"
+	        	android:gravity="center"
+	    	    android:text="@string/today"
+	    	    android:textStyle="bold"
+	    	    android:textColor="@color/black"/>
+	    	<TextView 
+	    		android:id="@+id/library_time_today"
+	    		android:layout_width="fill_parent"
+	    		android:layout_height="wrap_content"
+	    		android:gravity="center"
+	    		android:textColor="@color/black"/>
+	    </LinearLayout>
+		<!-- 垂直分隔条 -->
+		<View
+			android:background="@drawable/dashed_line"
+			android:layout_width="1.0dip"
+			android:layout_height="fill_parent">
+		</View>
+		<LinearLayout 
+	    	android:layout_width="fill_parent"
+	    	android:layout_height="wrap_content"
+	    	android:layout_weight="1"
+	    	android:orientation="vertical">
+	    	<TextView 
+	    	    android:layout_width="fill_parent"
+	    	    android:layout_height="wrap_content"
+	        	android:gravity="center"
+	    	    android:text="@string/tomorrow"
+	    	    android:textStyle="bold"
+	    	    android:textColor="@color/black"/>
+	    	<TextView 
+	        	android:id="@+id/library_time_tomorrow"
+	        	android:layout_width="fill_parent"
+	        	android:layout_height="wrap_content"
+	        	android:gravity="center"
+	        	android:textColor="@color/black" />
+	    </LinearLayout>
+	</LinearLayout>
 	<TextView
 		android:id="@+id/library_borrow_title"
 	    android:layout_width="fill_parent"
@@ -37,17 +75,16 @@
 	    android:padding="3dip"
 	    android:background="#65999999"
 	    android:textColor="@color/status_text"
+	    android:textStyle="bold"
 	/>
 	 <ListView
 	    android:id="@+id/library_borrow_list"
 	  	android:layout_width="fill_parent"
 	  	android:layout_height="fill_parent"
-	  	android:layout_weight="1" 
  	    android:cacheColorHint="#00000000"
 	    android:fadeScrollbars="true"
     	android:divider="@drawable/dashed_line"
     	android:dividerHeight="1dip"
     	android:fastScrollEnabled="true"
 	/>
-
 </LinearLayout>
