Borrowed books list almost finished.Some layout need to be corrected.

--- a/res/layout/library_row.xml
+++ b/res/layout/library_row.xml
@@ -1,30 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:padding="8dip">
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:layout_alignLeft="@+id/library_content"
-    android:layout_below="@+id/library_content"
-    android:padding="8dip">
-	<TextView
-		android:id="@+id/library_title"
-	    android:layout_width="fill_parent"
-	    android:layout_height="wrap_content"
-	    android:padding="3dip"
-	    android:layout_below="@+id/LinearLayout01"
-	    android:background="#65999999"
-	    android:textColor="@color/status_text"
-	/>
-	 <ListView
-	    android:id="@+id/library_list"
-	  	android:layout_width="fill_parent"
-	  	android:layout_height="fill_parent"
-	  	android:layout_weight="1" 
- 	    android:cacheColorHint="#00000000"
-	    android:fadeScrollbars="true"
-    	android:divider="@drawable/dashed_line"
-    	android:dividerHeight="1dip"
-    	android:fastScrollEnabled="true"
-	/>
+    android:orientation="vertical">
+    <TextView 
+        android:id="@+id/lib_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textStyle="bold"
+        android:textSize="14dip"/>
+    <TextView 
+        android:id="@+id/lib_author"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/lib_title"
+        android:textSize="14dip"/>
+    <TextView 
+        android:id="@+id/lib_borrow"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/lib_author"
+        android:layout_marginRight="4dp"
+        android:textSize="12dip"/>
+    <TextView 
+        android:id="@+id/lib_returns"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toRightOf="@id/lib_borrow"
+        android:layout_alignTop="@id/lib_borrow"
+        android:textSize="12dip"/>
+    <TextView 
+        android:id="@+id/lib_store"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/lib_borrow"
+        android:textSize="12dip"/>
 </RelativeLayout>
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:layout_gravity="right"
+    android:orientation="vertical">
+    <Button
+        android:id="@+id/lib_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:text="@string/reborrow"/>
+</RelativeLayout>
+</LinearLayout>
