--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -43,13 +43,24 @@
 	         android:textSize="15sp"
 	         />
 	    <Button 
+	         android:id="@+id/camp"
+	         android:background="@drawable/iphone_button_selector"
+	         android:layout_width="fill_parent"
+	         android:layout_height="fill_parent"
+	         android:layout_weight="1"
+	         android:scaleType="center"
+	         android:text="图书馆"
+	         android:textColor="#FFF"
+	         android:textSize="15sp"
+	         />
+	    <Button 
 	         android:id="@+id/news"
 	        android:background="@drawable/iphone_button_selector"
 	         android:layout_width="fill_parent"
 	         android:layout_height="fill_parent"
 	         android:layout_weight="1"
 	         android:scaleType="center"
-	         android:text="今日贝壳"
+	         android:text="校园卡"
 	         android:textColor="#FFF"
 	         android:textSize="15sp"
 	         />
