--- a/res/layout/campus_row.xml
+++ b/res/layout/campus_row.xml
@@ -5,29 +5,43 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:padding="8dip">
-    <TextView 
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/camp_time"
-        android:textStyle="bold"
-        android:textSize="14dip"/>
-    <TextView 
-        android:id="@+id/camp_time"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textStyle="bold"
-        android:textSize="14dip"/>
-    <TextView 
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/camp_place"
-        android:textStyle="bold"
-        android:textSize="14dip"/>
-    <TextView 
-        android:id="@+id/camp_place"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="14dip"/>
+	<LinearLayout
+    	xmlns:android="http://schemas.android.com/apk/res/android"
+    	android:layout_width="fill_parent"
+    	android:layout_height="wrap_content"
+    	android:orientation="horizontal">
+    	<TextView 
+        	android:layout_width="wrap_content"
+        	android:layout_height="wrap_content"
+        	android:text="@string/camp_time"
+        	android:textStyle="bold"
+        	android:textSize="14dip"/>
+    	<TextView 
+        	android:id="@+id/camp_time"
+        	android:layout_width="wrap_content"
+        	android:layout_height="wrap_content"
+        	android:layout_marginLeft="10dip"
+        	android:textStyle="bold"
+        	android:textSize="14dip"/>
+    </LinearLayout>
+	<LinearLayout
+    	xmlns:android="http://schemas.android.com/apk/res/android"
+    	android:layout_width="fill_parent"
+    	android:layout_height="wrap_content"
+    	android:orientation="horizontal">
+    	<TextView 
+        	android:layout_width="wrap_content"
+        	android:layout_height="wrap_content"
+        	android:text="@string/camp_place"
+        	android:textStyle="bold"
+        	android:textSize="14dip"/>
+    	<TextView 
+        	android:id="@+id/camp_place"
+        	android:layout_width="wrap_content"
+        	android:layout_height="wrap_content"
+        	android:layout_marginLeft="10dip"
+        	android:textSize="14dip"/>
+    </LinearLayout>
 	<LinearLayout
     	xmlns:android="http://schemas.android.com/apk/res/android"
     	android:layout_width="fill_parent"
@@ -43,11 +57,13 @@
        	 	android:id="@+id/camp_cost"
         	android:layout_width="wrap_content"
         	android:layout_height="wrap_content"
+        	android:layout_marginLeft="10dip"
         	android:layout_marginRight="4dp"
         	android:textSize="12dip"/>
     	<TextView 
         	android:layout_width="wrap_content"
         	android:layout_height="wrap_content"
+        	android:layout_marginLeft="15dip"
         	android:text="@string/camp_left"
         	android:textStyle="bold"
         	android:textSize="14dip"/>
@@ -55,6 +71,7 @@
         	android:id="@+id/camp_left"
         	android:layout_width="wrap_content"
         	android:layout_height="wrap_content"
+        	android:layout_marginLeft="10dip"
         	android:textSize="12dip"/>
     </LinearLayout>
 </LinearLayout>
