Some layout interface changes.

--- a/res/layout/library.xml
+++ b/res/layout/library.xml
@@ -76,12 +76,16 @@
 	    android:background="#65999999"
 	    android:textColor="@color/status_text"
 	    android:textStyle="bold" />
-	<RelativeLayout 
+	<ScrollView 
 	    android:id="@+id/lib_login"
+	    android:fadingEdge="vertical"
+	    android:layout_width="fill_parent" 
+	    android:layout_height="wrap_content"
+	    android:visibility="gone">
+	<RelativeLayout 
 	    android:layout_width="fill_parent"
 	    android:layout_height="wrap_content"
-	    android:orientation="horizontal"
-	    android:visibility="gone">
+	    android:orientation="horizontal">
 		<TextView
 	    	android:id="@+id/lib_username_name"
 	    	android:layout_width="wrap_content"
@@ -144,6 +148,7 @@
 		    android:layout_alignTop="@id/lib_login_progress"
 		    android:visibility="gone"/>
 	</RelativeLayout>
+	</ScrollView>
 	 <ListView
 	    android:id="@+id/library_borrow_list"
 	  	android:layout_width="fill_parent"
