--- a/res/layout/header_back.xml
+++ b/res/layout/header_back.xml
@@ -19,14 +19,21 @@
         />
       
         <!-- title -->
-        <TextView android:id="@+id/title"
+      <TextView
+          android:id="@+id/header_title"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
-          android:layout_toRightOf="@id/top_back"
-          android:layout_marginTop="12dp"
-          android:layout_marginLeft="3dp"
-          android:background="@null"
-          />
+          android:layout_alignParentLeft="true"
+          android:layout_marginTop="12dip"
+          android:layout_marginLeft="3dip"
+          android:gravity="center_vertical"
+          android:shadowColor="#666"
+          android:shadowRadius="1"
+          android:shadowDx="0"
+          android:shadowDy="-1"
+          android:text="@string/app_name"
+          android:textColor="#fff"
+          android:textSize="15sp"/>
          
 </RelativeLayout>
     
